--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,10 @@ task wrapper(type: Wrapper) {
 
 repositories { 
     mavenCentral()
-    jcenter()
+        //jcenter()
+        jcenter {
+            url "http://jcenter.bintray.com/" 
+        }
 }
 
 buildscript {
@@ -23,6 +26,16 @@ buildscript {
     dependencies {
         classpath "gradle.plugin.nl.javadude.gradle.plugins:license-gradle-plugin:0.12.1"
         classpath 'com.netflix.nebula:gradle-ospackage-plugin:3.1.0'
+    }
+}
+
+
+allprojects {
+    repositories {
+        //jcenter()
+        jcenter {
+            url "http://jcenter.bintray.com/" 
+        }
     }
 }
 
