--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,9 @@ task wrapper(type: Wrapper) {
 
 repositories { 
     mavenCentral()
+        maven  {
+        url "http://repo1.maven.org/maven2"
+    }
         //jcenter()
         jcenter {
             url "http://jcenter.bintray.com/" 
