--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ buildscript {
         }
     
         maven {
-            //url "https://plugins.gradle.org/m2/"
+            url "https://plugins.gradle.org/m2/"
             url "http://repo1.maven.org/maven2"
         }
     }
