--- a/build.gradle
+++ b/build.gradle
@@ -24,11 +24,11 @@ buildscript {
     
         maven {
             url "http://plugins.gradle.org/m2/"
-            url "http://repo1.maven.org/maven2"
+   //         url "http://repo1.maven.org/maven2"
         }
     }
     dependencies {
-        classpath "gradle.plugin.nl.javadude.gradle.plugins:license-gradle-plugin:0.13.1"
+        classpath "gradle.plugin.nl.javadude.gradle.plugins:license-gradle-plugin:0.12.1"
         classpath 'com.netflix.nebula:gradle-ospackage-plugin:3.1.0'
     }
 }
