--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ buildscript {
     
         maven {
             url "http://plugins.gradle.org/m2/"
-   //         url "http://repo1.maven.org/maven2"
+           url "https://repo1.maven.org/maven2"
         }
     }
     dependencies {
