--- a/build.gradle
+++ b/build.gradle
@@ -23,8 +23,8 @@ buildscript {
         }
     
         maven {
-            url "https://plugins.gradle.org/m2/"
-     //      url "https://repo1.maven.org/maven2"
+     //       url "https://plugins.gradle.org/m2/"
+           url "https://repo1.maven.org/maven2"
         }
     }
     dependencies {
